src/objects/RequisitoBeca__c.object
<CustomObject>
    <fields>
        <fullName>Beca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beca</label>
        <referenceTo>Beca__c</referenceTo>
        <relationshipLabel>Requisitos Beca</relationshipLabel>
        <relationshipName>Requisitos_Beca</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NombreConvenio__c</fullName>
        <formula>Beca__r.NombreConvenio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre convenio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requisito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requisito</label>
        <referenceTo>Requisito__c</referenceTo>
        <relationshipLabel>Requisitos Beca</relationshipLabel>
        <relationshipName>Requisitos_Beca</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requisito Beca</label>
    <nameField>
        <label>Requisito Beca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requisitos Beca</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>